Atualização da monografia
Atualização/backup da monografia

--- a/Monografia/bibliografia.bib
+++ b/Monografia/bibliografia.bib
@@ -135,8 +135,27 @@
 	urlaccessdate="28 de Abril de 2019"
 }
 
+@misc{CA2,
+	title={Sites públicos utilizando o Collective Access},
+	howpublished = {Site do projeto Collective Access},
+	url={https://docs.collectiveaccess.org/wiki/Public_sites_using_CollectiveAccess},
+	urlaccessdate="24 de Julho de 2019"
+}
 
+@misc{CAGIT,
+	title={Github do projeto Collective Access},
+	howpublished = {Site do projeto Collective Access},
+	url={https://github.com/collectiveaccess/},
+	urlaccessdate="29 de Julho de 2019"
+}
 
+@misc{Novamuse,
+	title={NovaMuse},
+	howpublished = {Site do NovaMuse},
+	url={http://www.novamuse.ca},
+	urlaccessdate="29 de Julho de 2019"
+}
+http://www.novamuse.ca
 
 % =======================
 % Techreport
