--- a/Monografia/bibliografia.bib
+++ b/Monografia/bibliografia.bib
@@ -53,7 +53,7 @@
 	title = {Museum Archive software project},
 	howpublished = {Site do projeto MUSARCH},
 	url= {http://musarch.com/},
-	urlaccessdate = {23 de Junho de 2018}
+	urlaccessdate = {25 de Outubro de 2019}
 }
 
 
@@ -69,49 +69,49 @@
 	title={Museums Digital Catalog},
 	howpublished = {Site do projeto Museolog},
 	url={http://museolog.unesco.kz/i.php?content=home},
-	urlaccessdate="23 de Junho de 2018"
+	urlaccessdate="25 de Outubro de 2019"
 }
 
 @misc{eHive,
 	title={eHive},
 	howpublished = {Site do projeto eHive},
 	url={http://info.ehive.com/},
-	urlaccessdate="24 de Junho de 2018"
+	urlaccessdate="25 de Outubro de 2019"
 }
 
 @misc{CSpace,
 	title={CollectionSpace},
 	howpublished = {Site do projeto CollectionSpace},
 	url={http://www.collectionspace.org},
-	urlaccessdate="24 de Junho de 2018"
+	urlaccessdate="25 de Outubro de 2019"
 }
 
 @misc{CSpace2,
 	title={CollectionSpace},
 	howpublished = {Lista dos browsers suportados pelo projeto},
 	url={https://wiki.collectionspace.org/display/DOC/Supported+Browsers},
-	urlaccessdate="24 de Junho de 2018"
+	urlaccessdate="25 de Outubro de 2019"
 }
 
 @misc{ResourceMate,
 	title={ResourceMate},
 	howpublished = {Site do projeto ResourceMate},
 	url={https://www.resourcemate.com/},
-	urlaccessdate="24 de Junho de 2018"
+	urlaccessdate="25 de Outubro de 2019"
 }
 
 @misc{PastPerfect,
 	title={PastPerfect Museum Software},
 	howpublished = {Site do projeto PastPerfect},
 	url={http://www.museumsoftware.com/},
-	urlaccessdate="28 de Junho de 2018"
+	urlaccessdate="25 de Outubro de 2019"
 }
 
 @misc{Argus,
 	title={Argus},
 	howpublished = {Site do projeto Argus},
 	url={https://lucidea.com/argus/},
-	urlaccessdate="28 de Junho de 2018"
+	urlaccessdate="25 de Outubro de 2019"
 }
 
 @misc{OmekaOrg,
