Organização Acervo Arquivológico
Organização Acervo Arquivológico

--- a/Monografia/capAntigoProjeto.tex
+++ b/Monografia/capAntigoProjeto.tex
@@ -633,7 +633,7 @@ Com a finalidade de se obter a uniformização no levantamento dos dados, adotou
 	Compreende a data inicial e final do dossiê descrito sob uma notação ou, no caso de um documento, aparecerá a sua data, caso de ela existir. O campo aparecerá em branco no caso de documento sem data.
 	\item \textbf{Numeração original:}
 	
-	Campo destinado a anotar, quando existente, o número de época de um encadernado. Tem po objetivo fornecer a sequência numérica dos livros existentes para determinados registros, como por exemplo, o de matrículas ou visualizar as falhas existentes (livros desaparecidos).
+	Campo destinado a anotar, quando existente, o número de época de um encadernado. Tem o objetivo fornecer a sequência numérica dos livros existentes para determinados registros, como por exemplo, o de matrículas ou visualizar as falhas existentes (livros desaparecidos).
 	\item \textbf{Apresentação:}
 	
 	Indica a forma gráfica do documento ou do dossiê, com a possibilidade de haver as 3 opções simultâneas: manuscrito, impresso ou datilografado.
@@ -744,7 +744,7 @@ Para consultá-lo cabem duas observações:
 	\item Foram adotados critérios visando a uniformização das entradas dos nomes no onomástico. As exceções, quando existentes, foram assinaladas logo após a regra.
 \end{itemize}
 \begin{enumerate}[label=(\alph*)]
-	\item Adotou0se como regra geral para o nome de pessoas, a entrada pelo último sobrenome.
+	\item Adotou-se como regra geral para o nome de pessoas, a entrada pelo último sobrenome.
 	
 	Ex.: AMOEDO, Rodolfo
 	
