--- a/pawtucket/app/lib/Parsers/TimeExpressionParser/pt_BR.lang
+++ b/pawtucket/app/lib/Parsers/TimeExpressionParser/pt_BR.lang
@@ -1,10 +1,10 @@
 # *** use ONLY lowercase letters in lists: input will be forced to lowercase for comparison ***
 
 # List month names; used whenever name of month needs to be displayed
-monthList = [january, february, march, april, may, june, july, august, september, october, november, december]
+monthList = [janeiro, fevereiro, março, abril, maio, junho, julho, agosto, setembro, october, novembro, dezembro]
 
 # *** the following list of months is for display and *SHOULD* be capitalized where appropriate
-monthListDisplay = [January, February, March, April, May, June, July, August, September, October, November, December]
+monthListDisplay = [Janeiro, Fevereiro, Março, Abril, Maio, Junho, Julho, Agosto, Setembro, Outubro, Novembro, Dezembro]
 
 # Hash table mapping acceptable month names to the display names defined in 'monthList'
 monthTable = {
