Revisão da Monografia
Revisão da Monografia

--- a/Monografia/bibliografia.bib
+++ b/Monografia/bibliografia.bib
@@ -155,7 +155,21 @@
 	url={http://www.novamuse.ca},
 	urlaccessdate="29 de Julho de 2019"
 }
-http://www.novamuse.ca
+
+@misc{Axiell,
+	title={Axiell},
+	howpublished = {Site do Axiell},
+	url={https://www.axiell.com/solutions/museums/},
+	urlaccessdate="28 de Novembro de 2019"
+}
+
+@misc{backup,
+	title={Back-up do Collective Access},
+	howpublished = {Collective Access Wiki},
+	url={https://docs.collectiveaccess.org/wiki/Backing_up_a_CollectiveAccess_installation},
+	urlaccessdate="01 de Dezembro de 2019"
+}
+
 
 % =======================
 % Techreport
