--- a/Monografia/capFicha.tex
+++ b/Monografia/capFicha.tex
@@ -9,7 +9,7 @@
 \subsection{Visão Geral}
 \begin{flushleft}
 	\includegraphics[width=\linewidth]{fichaId-01}
-	\includegraphics[width=\linewidth]{fichaId-02}
+%	\includegraphics[width=\linewidth]{fichaId-02}
 \end{flushleft}
 %\begin{flushleft}
 %	\includegraphics[width=\linewidth]{elemento-01}
@@ -60,10 +60,20 @@ Alguma outra referência para o objeto. O tipo de número também pode ser espec
 	\item Número de inventário na coleção do depositante
 	\item Número dentro da coleção do proprietário
 	\item Número de verificação
+	\item Número no Registro da UFRJ
 \end{itemize}
 \begin{flushleft}
 	\includegraphics[width=0.5\linewidth]{tipoOutroNumero}
 \end{flushleft}
+
+\subsection{Descrição Física}
+
+\begin{flushleft}
+	\includegraphics[width=\linewidth]{DescricFisica}
+\end{flushleft}
+
+Campo destinado à escrita livre sobre a descrição física do objeto.
+
 \subsection{Autor}
 \begin{flushleft}
 	\includegraphics[width=\linewidth]{autor-01}
