--- a/Monografia/Monografia_MDJVI_Dennis.tex
+++ b/Monografia/Monografia_MDJVI_Dennis.tex
@@ -159,7 +159,7 @@
 %----------------------------------------------------------------
 
 \local{Rio de Janeiro} 
-\data{dd}{mês}{2019} 
+\data{}{}{} 
 
 % ***************************************************************
 % Configurações de aparência do PDF final
@@ -236,14 +236,14 @@
 % ----------------------------------------------------------
 %
 \begin{folhadeaprovacao}
-  \assinatura{Cargo Título Nome Completo}
-             {Unidade -- Instituição}
-  \assinatura{Cargo Título Nome Completo}
-             {Unidade -- Instituição}
-  \assinatura{Cargo Título Nome Completo}
-             {Unidade -- Instituição}
-  \assinatura{Cargo Título Nome Completo}
-             {\UERJunidade \UERJunidadenome\ -- UERJ}
+  \assinatura{Prof. Dr. Jorge Duarte Pires Valério}
+             {Faculdade de Engenharia - UERJ}
+  \assinatura{$Prof^a.$ $Dr^a.$ Ana Maria Tavares Cavalcanti}
+             {Escola de Belas Artes - UFRJ}
+%  \assinatura{Cargo Título Nome Completo}
+%             {Unidade -- Instituição}
+%  \assinatura{Cargo Título Nome Completo}
+%             {\UERJunidade \UERJunidadenome\ -- UERJ}
 \end{folhadeaprovacao}
 %
 % ----------------------------------------------------------
