Revisão após apresentação
Correções solicitadas na apresentação

--- a/Monografia/bibliografia.bib
+++ b/Monografia/bibliografia.bib
@@ -170,6 +170,12 @@
 	urlaccessdate="01 de Dezembro de 2019"
 }
 
+@misc{ebaitau,
+	title={MUSEU da Escola de Belas Artes Dom João VI (MDJVI)},
+	howpublished = {ENCICLOPÉDIA Itaú Cultural de Arte e Cultura Brasileiras. São Paulo: Itaú Cultural, 2020},
+	url={http://enciclopedia.itaucultural.org.br/instituicao245872/museu-da-escola-de-belas-artes-dom-joao-vi-mdjvi},
+	urlaccessdate="09 de Janeiro de 2020"
+}
 
 % =======================
 % Techreport
