--- a/Monografia/capFicha.tex
+++ b/Monografia/capFicha.tex
@@ -40,7 +40,7 @@
 
 Para tornar o sistema de numeração mais objetivo, optou-se por manter somente o número de ordem, abandonando o modelo tripartido do livro de tombo original, ou seja, omitindo-se os dígitos referentes ao ano de entrada da peça e a sua categoria. 
 
-Para as peças compostas de diversas panes adotou-se o uso do complemento alfabético:
+Para as peças compostas de diversas partes adotou-se o uso do complemento alfabético:
 
 \begin{itemize}
 	\item registro 1463 A - Classe Objetos Pessoais, Subclasse Objetos de adorno, Relógio - e 
